--- a/index.css
+++ b/index.css
@@ -1,19 +1,29 @@
-.header-link {
+.header{
+    background-color: rgb(16, 94, 94);
     display: flex;
-    align-items: stretch;
-    color: white;
-    gap: 20px;
-    margin-bottom: 3px;
+    width: auto;
+    height: 200px;
 }
 
 h2 {
     color: white;
     display: flex;
-    flex-direction: row;
+
 }
 
-.header{
-    background-color: rgb(16, 94, 94);
+.header-link {
     display: flex;
     flex-direction: row;
+    color: white;
+    gap: 20px;
+    list-style: none;
 }
+* {
+    border: 2px solid red;
+    flex: 1;
+  }
+
+
+
+
+
